# slophammer

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  LICENSE  Makefile  README.md  action.yml  slophammer.yml
docs/: 2026-05-12-guardrails.md  2026-05-15-unified-dry-engine-plan.md  2026-05-16-typescript-implementation.md  2026-05-17-release-hardening-roadmap.md  2026-05-17-required-next-work.md  2026-05-18-tool-agnostic-typescript-validation.md  2026-05-19-go-coverage-artifact-contract.md  2026-05-19-go-target-resolution.md  2026-06-08-rust-cli-only-cargo-publish-plan.md  2026-06-08-rust-implementation-plan.md  2026-06-10-audit-followups.md  2026-06-10-config-dialect-decision.md  2026-06-11-enforcement-and-adoption-plan.md  2026-06-12-python-checker-plan.md  ACCEPTANCE_TESTS.md  AGENTIC_CODE_QUALITY.md  AGENT_ENTRYPOINT.md  COVERAGE_AND_CRAP.md  DEPENDENCY_CHECKS.md  DRY.md  DUPLICATION_DETECTION.md  MUTATION_TESTING.md  (+7 more)
python/: README.md  pyproject.toml  ty.toml
python-umbrella/: .gitignore  README.md  pyproject.toml
python-umbrella/src/_slophammer_dispatcher/: cli.py
python-umbrella/tests/: test_cli.py
python/scripts/: check-mutation.py
python/src/slophammer/: __init__.py  app.py  baseline.py  cli.py  config.py  dry.py  report.py  scan.py  toolchecks.py  ty_rules.json
python/src/slophammer/rules/: __init__.py  boundaries.py  definitions.py  evidence.py  imports.py  scope.py  suppressions.py  toolconfig.py
python/src/slophammer_py/: app.py  baseline.py  cli.py  config.py  core.py  dry.py  repo.py  report.py  scan.py  toolchecks.py
python/src/slophammer_py/rules/: __init__.py  boundaries.py  definitions.py  evidence.py  imports.py  scope.py  suppressions.py  toolconfig.py
python/tests/: test_baseline.py  test_cli.py  test_config_errors.py  test_dry.py  test_imports.py  test_repo_evidence.py  test_report.py  test_rules.py  test_suppressions.py  test_toolchecks.py  test_types_strict.py
python/utils/slophammer-placeholder/: README.md  pyproject.toml
python/utils/slophammer-placeholder/src/_slophammer_dispatcher/: __init__.py  cli.py
python/utils/slophammer-placeholder/tests/: test_cli.py
rust/: Cargo.toml  README.md
rust/crates/slophammer-app/: Cargo.toml
rust/crates/slophammer-app/src/: lib.rs
rust/crates/slophammer-cli/: Cargo.toml
rust/crates/slophammer-cli/src/: app.rs  baseline.rs  config.rs  core.rs  exec.rs  main.rs  report.rs  scan.rs
rust/crates/slophammer-cli/src/rust_rules/: boundaries.rs  definitions.rs  dry.rs  evidence.rs  mod.rs  scope.rs  suppressions.rs  unsafe_policy.rs  workflow_binding.rs
rust/crates/slophammer-cli/tests/: cli.rs
rust/crates/slophammer-cli/tests/support/: fixtures.rs
rust/crates/slophammer-config/: Cargo.toml
rust/crates/slophammer-config/src/: lib.rs
rust/crates/slophammer-core/: Cargo.toml
rust/crates/slophammer-exec/: Cargo.toml
rust/crates/slophammer-exec/src/: lib.rs
rust/crates/slophammer-report/: Cargo.toml
rust/crates/slophammer-report/src/: lib.rs
rust/crates/slophammer-rust/: Cargo.toml
rust/crates/slophammer-rust/src/: boundaries.rs  definitions.rs  dry.rs  evidence.rs  lib.rs  scope.rs  unsafe_policy.rs
rust/crates/slophammer-scan/: Cargo.toml
rust/crates/slophammer-scan/src/: lib.rs
rust/mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  timeout.txt  unviable.txt
rust/mutants.out/diff/: crates__slophammer-cli__src__app.rs_line_112_col_5.diff  crates__slophammer-cli__src__app.rs_line_128_col_5.diff  crates__slophammer-cli__src__app.rs_line_157_col_5.diff  crates__slophammer-cli__src__app.rs_line_175_col_23.diff  crates__slophammer-cli__src__app.rs_line_189_col_5.diff  crates__slophammer-cli__src__app.rs_line_203_col_5.diff  crates__slophammer-cli__src__app.rs_line_217_col_5.diff  crates__slophammer-cli__src__app.rs_line_217_col_5_001.diff  crates__slophammer-cli__src__app.rs_line_217_col_5_002.diff  crates__slophammer-cli__src__app.rs_line_221_col_27.diff  crates__slophammer-cli__src__app.rs_line_224_col_24.diff  crates__slophammer-cli__src__app.rs_line_224_col_8.diff  crates__slophammer-cli__src__app.rs_line_229_col_27.diff  crates__slophammer-cli__src__app.rs_line_232_col_8.diff  crates__slophammer-cli__src__app.rs_line_239_col_5.diff  crates__slophammer-cli__src__app.rs_line_239_col_5_001.diff  crates__slophammer-cli__src__app.rs_line_243_col_5.diff  crates__slophammer-cli__src__app.rs_line_243_col_5_001.diff  crates__slophammer-cli__src__app.rs_line_254_col_5.diff  crates__slophammer-cli__src__app.rs_line_254_col_5_001.diff  crates__slophammer-cli__src__app.rs_line_261_col_5.diff  crates__slophammer-cli__src__app.rs_line_261_col_5_001.diff  crates__slophammer-cli__src__app.rs_line_277_col_9.diff  crates__slophammer-cli__src__app.rs_line_56_col_5.diff  crates__slophammer-cli__src__app.rs_line_60_col_5.diff  crates__slophammer-cli__src__app.rs_line_71_col_5.diff  crates__slophammer-cli__src__app.rs_line_77_col_5.diff  crates__slophammer-cli__src__app.rs_line_87_col_5.diff  crates__slophammer-cli__src__app.rs_line_97_col_5.diff  crates__slophammer-cli__src__baseline.rs_line_100_col_5.diff  crates__slophammer-cli__src__baseline.rs_line_100_col_5_001.diff  crates__slophammer-cli__src__baseline.rs_line_103_col_45.diff  crates__slophammer-cli__src__baseline.rs_line_105_col_37.diff  crates__slophammer-cli__src__baseline.rs_line_105_col_37_001.diff  crates__slophammer-cli__src__baseline.rs_line_110_col_5.diff  crates__slophammer-cli__src__baseline.rs_line_110_col_5_001.diff  crates__slophammer-cli__src__baseline.rs_line_112_col_23.diff  crates__slophammer-cli__src__baseline.rs_line_112_col_23_001.diff  crates__slophammer-cli__src__baseline.rs_line_112_col_36.diff  crates__slophammer-cli__src__baseline.rs_line_119_col_21.diff  (+639 more)
rust/scripts/: install-packaged-cli.sh  publish-crate.sh  publish-crates.sh  test-packaged-crate.sh
templates/python/: .gitignore  README.md  pyproject.toml
templates/python/src/guardrails_template/: __init__.py
templates/python/src/slophammer_template/: __init__.py  greeting.py
templates/python/tests/: test_greeting.py
(+496 files in other folders)
