[project]
name = "slophammer"
version = "0.3.0"
description = "Command entry point for Slophammer"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "dutifuldev" }]
dependencies = ["slophammer-py==0.3.0"]

[project.urls]
Homepage = "https://github.com/dutifuldev/slophammer"
Repository = "https://github.com/dutifuldev/slophammer"

[project.scripts]
slophammer = "_slophammer_dispatcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/_slophammer_dispatcher"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
    "ty>=0.0.9",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C90",
    "ANN",
    "RUF",
    "TID",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
