[project]
name = "slophammer-py"
version = "0.1.0"
description = "Repository quality checker for agent-assisted Python projects"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "dutifuldev" }]
dependencies = ["pyyaml>=6.0.2,<7"]

[project.urls]
Homepage = "https://github.com/dutifuldev/slophammer"
Repository = "https://github.com/dutifuldev/slophammer"

[project.scripts]
slophammer-py = "slophammer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slophammer"]

[dependency-groups]
dev = [
    "mutmut>=3.2",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "ty>=0.0.9",
    "types-pyyaml>=6.0.12",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C90",
    "ANN",
    "RUF",
    "TID",
]
# ANN401 stays on: no Any in signatures; escapes need `# noqa: ANN401 -- reason`.

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.per-file-ignores]
# Tests are exempt from annotation coverage by convention.
"tests/**" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/slophammer"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mutmut]
paths_to_mutate = ["src/slophammer/rules/", "src/slophammer/repo.py"]
also_copy = [
    "src/slophammer/__init__.py",
    "src/slophammer/app.py",
    "src/slophammer/baseline.py",
    "src/slophammer/cli.py",
    "src/slophammer/config.py",
    "src/slophammer/core.py",
    "src/slophammer/dry.py",
    "src/slophammer/report.py",
    "src/slophammer/scan.py",
    "src/slophammer/toolchecks.py",
    "src/slophammer/ty_rules.json",
    "src/slophammer/py.typed",
]
