[workspace]
members = [
  "crates/slophammer-app",
  "crates/slophammer-cli",
  "crates/slophammer-config",
  "crates/slophammer-core",
  "crates/slophammer-exec",
  "crates/slophammer-report",
  "crates/slophammer-rust",
  "crates/slophammer-scan",
]
resolver = "2"

[workspace.package]
authors = ["Bob <dutifulbob@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/dutifuldev/slophammer"
rust-version = "1.86"
version = "0.1.0"

[workspace.dependencies]
camino = "1.2.1"
clap = { version = "4.5.53", features = ["derive"] }
globset = "0.4.18"
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syn = { version = "2.0.111", features = ["full", "visit"] }
thiserror = "2.0.17"
toml_edit = "0.23.7"
yaml_serde = "0.10.4"

[patch.crates-io]
slophammer-app = { path = "crates/slophammer-app" }
slophammer-config = { path = "crates/slophammer-config" }
slophammer-core = { path = "crates/slophammer-core" }
slophammer-exec = { path = "crates/slophammer-exec" }
slophammer-report = { path = "crates/slophammer-report" }
slophammer-rust = { path = "crates/slophammer-rust" }
slophammer-scan = { path = "crates/slophammer-scan" }
