[workspace]
members = ["crates/slophammer-cli"]
resolver = "2"

[workspace.package]
authors = ["Bob <dutifulbob@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/dutifuldev/slophammer"
rust-version = "1.86"
version = "0.2.0"

[workspace.dependencies]
camino = "1.2.1"
clap = { version = "4.5.53", features = ["derive"] }
globset = "0.4.18"
ignore = "0.4.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syn = { version = "2.0.111", features = ["full", "visit"] }
tempfile = "3.27.0"
thiserror = "2.0.17"
toml_edit = "0.23.7"
yaml_serde = "0.10.4"
