[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slophammer-python-template"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5"
]

[tool.hatch.build.targets.wheel]
packages = ["src/slophammer_template"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "N", "PL", "RUF", "SIM", "UP"]
ignore = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_explicit = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]

