[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slophammer-python-template"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "ty>=0.0.9",
  "typeguard>=4.3"
]

[tool.hatch.build.targets.wheel]
packages = ["src/slophammer_template"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "N", "ANN", "PL", "RUF", "SIM", "TID", "UP"]
ignore = ["PLR2004"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests are exempt from annotation coverage by convention.
"tests/**" = ["ANN"]

# ty configured to the contract py.types-strict-required enforces.
[tool.ty.terminal]
error-on-warning = true

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.rules]
missing-type-argument = "error"
possibly-missing-attribute = "error"
possibly-unresolved-reference = "error"
possibly-missing-import = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
# typeguard verifies the annotations at runtime while the tests execute, so
# a signature that lies about its types fails the suite.
addopts = "--typeguard-packages=slophammer_template"

