[package]
name = "slophammer-app"
description = "Application orchestration for the Slophammer Rust implementation."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde_json.workspace = true
slophammer-config = { path = "../slophammer-config", version = "0.1.0" }
slophammer-core = { path = "../slophammer-core", version = "0.1.0" }
slophammer-exec = { path = "../slophammer-exec", version = "0.1.0" }
slophammer-report = { path = "../slophammer-report", version = "0.1.0" }
slophammer-rust = { path = "../slophammer-rust", version = "0.1.0" }
slophammer-scan = { path = "../slophammer-scan", version = "0.1.0" }
thiserror.workspace = true
