[package]
name = "slophammer-rs"
description = "Rust implementation of the Slophammer repository quality checker."
authors.workspace = true
edition.workspace = true
include = ["Cargo.toml", "src/**", "tests/cli.rs", "tests/support/**"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
camino.workspace = true
clap.workspace = true
globset.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
yaml_serde.workspace = true

[[bin]]
name = "slophammer-rs"
path = "src/main.rs"

[dev-dependencies]
tempfile.workspace = true
