[package]
name = "slophammer-scan"
description = "Repository scanner for the Slophammer Rust implementation."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
camino.workspace = true
ignore.workspace = true
thiserror.workspace = true

